--- a/src/components/FooterLanding.astro
+++ b/src/components/FooterLanding.astro
@@ -17,13 +17,14 @@ const firstColumnLinks = [
     link: "/#spotlight",
   },
   {
-    text: "Co-located Event",
-    link: "/#rust-global",
+    text: "Co-located Events",
+    link: "/#co-located-events",
   },
   {
     text: "Venue",
     link: "/venue",
   },
+
 ]
 
 const secondColumnLinks = [
