--- a/src/components/FooterLandingZh.astro
+++ b/src/components/FooterLandingZh.astro
@@ -18,12 +18,13 @@ const firstColumnLinks = [
   },
   {
     text: "同期活动",
-    link: "/zh/#rust-global",
+    link: "/zh/#co-located-events",
   },
   {
     text: "会议地点",
     link: "/zh/venue",
   },
+
 ]
 
 const secondColumnLinks = [
