--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -186,14 +186,35 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         description: "RustGlobal是Rust基金会主办的首次致力于在全球领导力环境中应用Rust的盛会。",
         image: ["/images/homepage/rust-global-logo.svg","/images/homepage/RustChinaConf-hangzhou-black.svg"],
         link: "https://rustcc.cn/2025conf/",
-        openInNewTab: true,
+        openInNewTab: false,
+      },
+      {
+        title: "人工智能愿景论坛",
+        description: "一场汇聚全球思想家与实践者的高端闭门论坛，旨在探索人工智能如何与人类价值共生，确保AI发展始终以人为本。",
+        image: "/images/homepage/co-located-ai-vision.png",
+        link: "https://forum.gosim.org/en/",
+        openInNewTab: false,
+      },
+      {
+        title: "开放共创 · 可持续发展大会",
+        description: "一场汇聚全球开源、人工智能及政策领域专家的盛会，旨在通过开放协作与AI技术，共同为联合国可持续发展目标（SDG）的实现加速。",
+        image: "/images/homepage/co-located-open-sdg.jpg",
+        link: "https://opensdg.gosim.org/en/",
+        openInNewTab: false,
+      },
+      {
+        title: "超级智能体 Campathon",
+        description: "一场融合了技术训练营与编程马拉松的开发者大赛，参赛者将学习并亲手构建一个富有个性与情感的“超级智能体”。",
+        image: "/images/homepage/co-located-super-agent.png",
+        link: "https://mofa.ai/super-agent-hackathon/",
+        openInNewTab: false,
       },
       {
         title: "Code Alert黑客松大赛",
         description: "一场基于经典游戏“红色警戒”的AI黑客松。参赛者将使用自然语言指挥AI智能体，通过在线挑战和现场决赛进行对战。",
-        image: "/images/homepage/hackathon-code-alert.png",
+        image: "/images/homepage/co-located-code-alert.png",
         link: "https://hackathon.mofa.ai",
-        openInNewTab: true,
+        openInNewTab: false,
       },
     ]}
   />
