--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -28,33 +28,33 @@ const links = [
     link: "/#spotlight",
   },
   {
-    text: "Co-located Event",
+    text: "Co-located Events",
     subLinks: [
       {
         text: "RustGlobal & RustChinaConf",
         link: "https://rustcc.cn/2025conf/",
-        openInNewTab: true,
+        openInNewTab: false,
       },
       {
         text: "AI Vision Forum",
         link: "https://forum.gosim.org/en/",
-        openInNewTab: true,
+        openInNewTab: false,
       },
       {
         text: "Open for SDG Conference",
         link: "https://opensdg.gosim.org/en/",
-        openInNewTab: true,
+        openInNewTab: false,
+      },
+      {
+        text: "Super Agent Campathon",
+        link: "https://mofa.ai/super-agent-hackathon/",
+        openInNewTab: false,
       },
       {
         text: "Code Alert Hackathon",
         link: "https://hackathon.mofa.ai",
-        openInNewTab: true,
+        openInNewTab: false,
       },
-      // {
-      //   text: "AIOS Hackathon",
-      //   link: "https://mofa.ai/super-agent-hackathon/",
-      //   openInNewTab: true,
-      // },
     ],
   },
   {
