--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -29,23 +29,29 @@ const links = [
       {
         text: "RustGlobal & RustChinaConf",
         link: "https://rustcc.cn/2025conf/",
-        openInNewTab: true,
+        openInNewTab: false,
       },
       {
         text: "人工智能愿景论坛",
         link: "https://forum.gosim.org",
-        openInNewTab: true,
+        openInNewTab: false,
       },
       {
         text: "开放共创 · 可持续发展大会",
         link: "https://opensdg.gosim.org/cn/",
-        openInNewTab: true,
+        openInNewTab: false,
+      },
+      {
+        text: "超级智能体 Campathon",
+        link: "https://mofa.ai/super-agent-hackathon/",
+        openInNewTab: false,
       },
       {
         text: "Code Alert 黑客松大赛",
         link: "https://hackathon.mofa.ai",
-        openInNewTab: true,
+        openInNewTab: false,
       },
+
       
       // {
       //   text: "AIOS 黑客松大赛",
