--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -202,22 +202,36 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         description: "RustGlobal is the first Rust Foundation-hosted gathering dedicated to the use of Rust in global leadership settings.",
         image: ["/images/homepage/rust-global-logo.svg","/images/homepage/RustChinaConf-hangzhou-black.svg"],
         link: "https://rustcc.cn/2025conf/",
-        openInNewTab: true,
+        openInNewTab: false,
+      },
+      {
+        title: "AI Vision Forum",
+        description: "An exclusive forum for global thinkers and practitioners to explore a symbiotic future for AI and humanity, ensuring technological progress is guided by core human values.",
+        image: "/images/homepage/co-located-ai-vision.png",
+        link: "https://forum.gosim.org/en/",
+        openInNewTab: false,
+      },
+            {
+        title: "Open for SDG Conference",
+        description: "A global conference uniting experts in open source, AI, and policy to accelerate the UN Sustainable Development Goals (SDGs) through open collaboration and technology.",
+        image: "/images/homepage/co-located-open-sdg.jpg",
+        link: "https://opensdg.gosim.org/en/",
+        openInNewTab: false,
+      },
+      {
+        title: "Super Agent Campathon",
+        description: "A developer 'Campathon' that combines a training camp with a hackathon, challenging participants to build personalized and emotionally intelligent 'Super Agents' for next-generation interaction.",
+        image: "/images/homepage/co-located-super-agent.png",
+        link: "https://mofa.ai/super-agent-hackathon/",
+        openInNewTab: false,
       },
       {
         title: "Code Alert Hackathon",
         description: "An AI hackathon based on the classic game \"Red Alert.\" Competitors will use natural language to command an AI agent through online challenges and live final battles.",
-        image: "/images/homepage/hackathon-code-alert.png",
+        image: "/images/homepage/co-located-code-alert.png",
         link: "https://hackathon.mofa.ai",
-        openInNewTab: true,
+        openInNewTab: false,
       },
-      // {
-      //   title: "To be announced",
-      //   description: "Stay tuned for more information on our third co-located event.",
-      //   image: "/images/homepage/placeholder.jpg",
-      //   link: "#",
-      //   openInNewTab: false,
-      // },
     ]}
   />
 
