--- a/src/pages/zh/workshops/[...name].astro
+++ b/src/pages/zh/workshops/[...name].astro
@@ -4,8 +4,8 @@ import { Picture } from "astro:assets";
 import type { ImageMetadata } from "astro";
 
 // Components
-import Layout from "layouts/LayoutLanding.astro";
-import speakers from "json/Speakers.json";
+import Layout from "layouts/LayoutLandingZh.astro";
+import speakers from "json/WorkshopsZh.json";
 import schedule from "json/Schedule.json";
 import scheduleForum from "json/Schedule-forum.json";
 
