Updated featured speakers page

--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -23,6 +23,10 @@ const links = [
     text: "Tracks",
     link: "/#tracks",
   },
+  // {
+  //   text: "Sponsors",
+  //   link: "/sponsors",
+  // },
   {
     text: "Spotlight",
     link: "/#spotlight",
