--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -19,6 +19,10 @@ const links = [
     text: "主题",
     link: "/zh/#tracks",
   },
+  // {
+  //   text: "赞助商",
+  //   link: "/zh/sponsors",
+  // },
   {
     text: "Spotlight",
     link: "/zh/#spotlight",
