--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import FeaturedSpeakers from "components/FeaturedSpeakers.astro";
 import Timeline from "components/Timeline.astro";
 import Marquee from "components/Marquee.astro";
 import Cards from "components/Cards.astro";
+import CardsSponsors from "components/CardsSponsors.astro";
 
 // Images
 import Placeholder1 from "images/homepage/stats1.jpeg";
@@ -41,13 +42,13 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     location="Hangzhou, China"
     links={[
       {
-        text: "Call for Proposals",
+        text: "Call for Proposals - 8/18 Due",
         link: "/#proposals",
         openInNewTab: false,
       },
     ]}
   />
-  <!--   <CardsSponsors
+    <!-- <CardsSponsors
     title="Proudly Sponsored By"
     sponsors={[
       {
@@ -159,7 +160,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
 
   <TextAndImageReverse
     id="proposals"
-    title="Call for Proposals"
+    title="Call for Proposals - 8/18 Due"
     text="We’re looking for bold ideas and fresh voices to shape the future. If you have insights on cutting-edge technology, emerging trends, or transformative practices, we want to hear from you. Submit a proposal to speak and join a lineup of innovators, thought leaders, and changemakers pushing the boundaries of what’s next."
     image={Proposals}
     imageAlt="GOSIM Hangzhou"
@@ -236,7 +237,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
   />
 
   
-<!--
+
   <TextAndSponsors
     title="Sponsorship Opportunities"
     text="Reach thousands of people in your target audience by becoming a supporting organization at GOSIM Hangzhou 2025."
@@ -272,7 +273,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
       },
     ]}
   />
-   -->
+  
   <TextAndImage
     id="spotlight"
     title="GOSIM AI for Human Spotlight"
