--- a/src/pages/zh/sponsors.astro
+++ b/src/pages/zh/sponsors.astro
@@ -7,13 +7,13 @@ import AllSponsors from "components/Sponsors.astro";
 ---
 
 <Layout
-  title="支持者 – GOSIM Hangzhou 2025"
+  title="赞助商 – GOSIM Hangzhou 2025"
   description="GOSIM Hangzhou 2025是开源AI项目、开发者、研究人员和行业赞助商的聚会，旨在分享知识、相互学习和合作。"
   navBackground="light"
-  pageTransitionName="支持者"
+  pageTransitionName="赞助商"
 >
   <HeroText
-    title="支持者"
+    title="赞助商"
     text="我们很高兴为您带来一次令人难以置信的体验，这要归功于我们的赞助商和支持组织的慷慨支持。我们与真正的创新者合作，他们正在推动我们行业的边界。"
     lightgray
   />
