--- a/src/pages/workshops/index.astro
+++ b/src/pages/workshops/index.astro
@@ -13,7 +13,7 @@ import AllWorkshops from "components/Workshops.astro";
   pageTransitionName="Speakers"
 >
   <HeroText
-    title="This Year's Workshops"
+    title="Workshop & Co-located Events Speakers"
     text=""
     lightgray
   />
