--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -284,7 +284,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     dataThemeSection="light"
     ctaButton={{
       text: "立即申请或提名 - 8月18日 截止",
-      link: "https:/spotlight.gosim.org/",
+      link: "https://spotlight.gosim.org",
       openInNewTab: true,
     }}
   />
