--- a/src/pages/speakers/index.astro
+++ b/src/pages/speakers/index.astro
@@ -25,7 +25,7 @@ import AllSpeakers from "components/Speakers.astro";
 
             <div class="col col-title">
                 <div class="col-row col-row-title">
-                    <h1 style="margin-bottom: 2rem; color: #000;">This Year's Speakers</h1>
+                    <h1 style="margin-bottom: 2rem; color: #000;">Keynote & Track Speakers</h1>
                 </div>
             </div>
 
