--- a/src/pages/zh/speakers/index.astro
+++ b/src/pages/zh/speakers/index.astro
@@ -25,7 +25,7 @@ import AllSpeakers from "components/SpeakersZh.astro";
 
             <div class="col col-title">
                 <div class="col-row col-row-title">
-                    <h1 style="margin-bottom: 2rem; color: #000;">本届讲师</h1>
+                    <h1 style="margin-bottom: 2rem; color: #000;">全体 Keynote & 主题讲师</h1>
                 </div>
             </div>
 
