--- a/src/pages/zh/workshops/index.astro
+++ b/src/pages/zh/workshops/index.astro
@@ -13,7 +13,7 @@ import AllWorkshops from "components/WorkshopsZh.astro";
   pageTransitionName="Speakers"
 >
   <HeroText
-    title="本届工作坊"
+    title="工作坊 & 同期活动讲师"
     text=""
     lightgray
   />
