--- a/src/components/FeaturedSpeakers.astro
+++ b/src/components/FeaturedSpeakers.astro
@@ -7,7 +7,7 @@ import type { ImageMetadata } from "astro"
 import Button from "components/Button.astro"
 
 // JSON
-import speakersData from "json/Speakers.json"
+import speakersData from "json/FeaturedSpeakers.json"
 
 // Define speaker type
 interface Speaker {
@@ -76,7 +76,7 @@ const getCategoryNameFromTag = (tagId: string): string => {
           filteredSpeakers?.map(
             (loop) => (
               <div class="flickity-slide" data-cursor-bubble-text="Drag">
-                <a href={`/speakers/${loop.id}/`} class="speaker-card-link">
+                <a href={`/workshops/${loop.id}/`} class="speaker-card-link">
                   <div class="single-speakers-card">
                     <div class="card-row card-row-image">
                       <div class="card-image">
@@ -95,11 +95,7 @@ const getCategoryNameFromTag = (tagId: string): string => {
                           )}
                       </div>
 
-                      <div class="card-tags group-tags">
-                        <div class="single-tag">
-                          <p>{getCategoryNameFromTag(loop.tag)}</p>
-                        </div>
-                      </div>
+
                     </div>
                     <div class="card-row card-row-info">
                       <h3 class="h5">{loop.name}</h3>
