--- a/src/components/FeaturedSpeakersZh.astro
+++ b/src/components/FeaturedSpeakersZh.astro
@@ -7,7 +7,7 @@ import type { ImageMetadata } from "astro"
 import Button from "components/Button.astro"
 
 // JSON
-import speakersData from "json/SpeakersZh.json"
+import speakersData from "json/FeaturedSpeakersZh.json"
 
 // Define speaker type
 interface Speaker {
@@ -76,7 +76,7 @@ const getCategoryNameFromTag = (tagId: string): string => {
           filteredSpeakers?.map(
             (loop) => (
               <div class="flickity-slide" data-cursor-bubble-text="Drag">
-                <a href={`/speakers/${loop.id}/`} class="speaker-card-link">
+                <a href={`/workshops/${loop.id}/`} class="speaker-card-link">
                   <div class="single-speakers-card">
                     <div class="card-row card-row-image">
                       <div class="card-image">
